fix: inversão de posição entre lobos-section e pagination-div para manter a coerência com o Figma & adição de margin para melhorar visibilidade

--- a/styles/list-lobinhos.css
+++ b/styles/list-lobinhos.css
@@ -215,6 +215,7 @@ main {
     place-self: center;
     width: fit-content;
     min-width: 20%;
+    margin: 40px 0px;
 }
 
 .page-btn {
